<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajoutActionsSkisLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageAjoutActionsSkis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtnomskis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblnbsorties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/txtsorties"
                android:text="@string/lblNbSorties"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtsorties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblreparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnomskis"
                android:layout_toStartOf="@id/reparation"
                android:textStyle="italic"
                android:text="@string/lblreparation"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/reparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnomskis"
                android:layout_toStartOf="@id/lblreparationfin"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lblreparationfin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnomskis"
                android:layout_toStartOf="@id/lblnbaffutage"
                android:textStyle="italic"
                android:text="@string/lblreparationfin"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/lblnbaffutage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnomskis"
                android:layout_toStartOf="@id/txtnbaffutage"
                android:text="@string/lblnbaffutage"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtnbaffutage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnomskis"
                android:layout_toStartOf="@id/lblnbfartage"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="12sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/lblnbfartage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnomskis"
                android:layout_toStartOf="@id/txtnbfartage"
                android:text="@string/lblnbfartage"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtnbfartage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/txtnomskis"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="12sp"
                android:textStyle="italic" />


        </RelativeLayout>



        <Button
            android:id="@+id/btnsortie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnsortie" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnaffutage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnaffutage" />

            <Button
                android:id="@+id/btnaffutagepierre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnaffutagepierre" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnfartage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnfartage" />

            <Button
                android:id="@+id/btnfartagegraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnfartagegraph" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnreparationman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnreparationman" />

            <Button
                android:id="@+id/btnreparationmag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnreparationmag" />
        </LinearLayout>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="611dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/swdelete"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/swdelete" />

            <Button
                android:id="@+id/btndelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/btndelete" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ListView
            android:id="@+id/lvActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>